logout bolder copyright sign fixed no gap between logout and bottom of screen #274

--- a/src/less/left-panel.less
+++ b/src/less/left-panel.less
@@ -41,7 +41,7 @@
 					position: relative;
 					color: @lava-gray-dark;
 				}
-				> span.action{
+				> .action{
 					transition: .4s all;
 					white-space: nowrap;
 					overflow-x: hidden;
